[B]Version v0.0.9[/B]
- Fixed constants file import errors

[B]Version v0.0.8[/B]
- Moved all modes to Constants File

[B]Version v0.0.7[/B]
- Updated all icons to reflect the updated theme
- Desi TV Shows performance improvements
- UI Enhancements
- Watch History Issue fixed
