@@ -1,3 +1,6 @@
+[B]Version v0.0.10[/B]
+- Fixed DesiRulez Source links
+
 [B]Version v0.0.9[/B]
 - Fixed constants file import errors
 
